Fixed sliders being stuck at the top on DES-II page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -646,7 +646,7 @@ img.emoji {
   
   /* The slider */
   .slider {
-    position: absolute;
+    /* position: absolute; */
     cursor: pointer;
     top: 0;
     left: 0;
